# rust-lambda-boilerplate

./: .gitignore  .terraform.lock.hcl  README.md  apigateway.tf  lambda.tf  lambda_module.tf  main.tf
src/: Cargo.toml  main.rs
