[package]
name = "rust-aws-lambda"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# A binary target is required, so we specify the path to the main file.
[[bin]]
name = "bootstrap"
path = "main.rs"

[dependencies]
lambda_runtime = "0.9.1"
serde = "1.0.196"
serde_derive = "1.0.196"
serde_json = "1.0.112"
tokio = "1.35.1"
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"] }
warp = "0.3.6"

